samples/_failures_safe/1761538913_4afe88_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f15a6549.c: In function ‘graph_dijkstra’:
./samples/SAFE/__tmp_f15a6549.c:140:5: error: expected expression at end of input
  140 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_f15a6549.c:140:5: error: expected declaration or statement at end of input
